# uniffi-rs

./: .gitignore  Cargo.toml
docs/: contributing.md
docs/manual/src/: SUMMARY.md
examples/arithmetic/: Cargo.toml
examples/arithmetic/src/: lib.rs
examples/callbacks/: Cargo.toml
examples/callbacks/src/: lib.rs
examples/custom-types/: Cargo.toml
examples/custom-types/src/: lib.rs
examples/geometry/: Cargo.toml
examples/geometry/src/: lib.rs
examples/rondpoint/: Cargo.toml
examples/rondpoint/src/: lib.rs
examples/sprites/: Cargo.toml
examples/sprites/src/: lib.rs
examples/todolist/: Cargo.toml
examples/todolist/src/: lib.rs
fixtures/basics/: Cargo.toml
fixtures/basics/src/: lib.rs
fixtures/basics/tests/: test_generated_bindings.rs
fixtures/callbacks/: Cargo.toml
fixtures/callbacks/src/: lib.rs
fixtures/coverall/: Cargo.toml
fixtures/coverall/src/: lib.rs
fixtures/ext-types/guid/: Cargo.toml
fixtures/ext-types/lib/: Cargo.toml
fixtures/ext-types/uniffi-one/: Cargo.toml
fixtures/external-types/crate-one/: Cargo.toml
fixtures/external-types/crate-two/: Cargo.toml
fixtures/external-types/lib/: Cargo.toml
fixtures/hello-world/: Cargo.toml
fixtures/hello-world/src/: lib.rs
fixtures/hello-world/tests/: test_generated_bindings.rs
fixtures/hello-world/tests/bindings/: test_hello_world.kts  test_hello_world.py
fixtures/proc-macro/src/: lib.rs
fixtures/regressions/enum-without-i32-helpers/: Cargo.toml
fixtures/regressions/fully-qualified-types/: Cargo.toml
fixtures/regressions/kotlin-experimental-unsigned-types/: Cargo.toml
fixtures/simple-fns/src/: lib.rs
fixtures/swift-omit-labels/: Cargo.toml
fixtures/swift-omit-labels/src/: lib.rs
fixtures/uitests/: Cargo.toml
fixtures/uniffi-fixture-time/: Cargo.toml
fixtures/uniffi-fixture-time/src/: lib.rs
uniffi/: Cargo.toml
uniffi/src/: testing.rs
uniffi_bindgen/: Cargo.toml
uniffi_bindgen/src/: lib.rs
uniffi_macros/: Cargo.toml
uniffi_macros/src/: enum_.rs  error.rs  export.rs  lib.rs  object.rs  record.rs  util.rs
uniffi_macros/src/export/metadata/: convert.rs
uniffi_meta/: Cargo.toml
uniffi_meta/src/: lib.rs
(+34 files in other folders)
