[package]
name = "uniffi_macros"
version = "0.18.0"
authors = ["Firefox Sync Team <sync-team@mozilla.com>"]
description = "a multi-language bindings generator for rust (convenience macros)"
documentation = "https://mozilla.github.io/uniffi-rs"
homepage = "https://mozilla.github.io/uniffi-rs"
repository = "https://github.com/mozilla/uniffi-rs"
license = "MPL-2.0"
edition = "2018"
keywords = ["ffi", "bindgen"]

[lib]
proc-macro = true

[dependencies]
camino = "1.0.8"
fs-err = "2.7.0"
glob = "0.3"
once_cell = "1.10.0"
proc-macro2 = "1.0"
quote = "1.0"
serde = "1.0.136"
serde_json = "1.0.79"
syn = { version = "1.0", features = ["extra-traits"] }
uniffi_meta = { path = "../uniffi_meta", version = "=0.17.0" }

[features]
# FIXME(jplatte): Remove nightly from defaults
default = ["nightly"]
nightly = []
