[package]
name = "fixture-hello-world"
version = "0.17.0"
authors = ["Firefox Sync Team <sync-team@mozilla.com>"]
edition = "2018"
license = "MPL-2.0"
publish = false

[lib]
name = "uniffi_fixture_hello_world"
crate-type = ["lib", "cdylib"]

[dependencies]
uniffi = { path = "../../uniffi", features = ["builtin-bindgen"] }
thiserror = "1.0"
lazy_static = "1.4"

[dev-dependencies]
uniffi_macros = { path = "../../uniffi_macros" }
