[package]
name = "crate_two"
edition = "2018"
version = "0.18.0"
authors = ["Firefox Sync Team <sync-team@mozilla.com>"]
license = "MPL-2.0"
publish = false

[dependencies]
anyhow = "1"
bytes = "1.0"
uniffi_macros = {path = "../../../uniffi_macros"}
uniffi = {path = "../../../uniffi"}
crate_one = {path = "../crate-one"}
